# internal/server/http.go
@@ -1,17 +1,20 @@
 package server
 
 import (
-	v1 "github.com/dqixuan/stock_info/api/helloworld/v1"
+	healthv1 "github.com/dqixuan/stock_info/api/health/v1"
+	stockv1 "github.com/dqixuan/stock_info/api/stock/v1"
 	"github.com/dqixuan/stock_info/configs"
 	"github.com/dqixuan/stock_info/internal/service"
-
-	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/http"
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *configs.HttpServer, greeter *service.GreeterService, logger log.Logger) *http.Server {
+func NewHTTPServer(
+	c *configs.HttpServer,
+	stockService *service.StockService,
+	healthService *service.HealthService,
+) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -24,6 +27,7 @@ func NewHTTPServer(c *configs.HttpServer, greeter *service.GreeterService, logge
 		opts = append(opts, http.Timeout(c.Timeout))
 	}
 	srv := http.NewServer(opts...)
-	v1.RegisterGreeterHTTPServer(srv, greeter)
+	stockv1.RegisterStockServiceHTTPServer(srv, stockService)
+	healthv1.RegisterHealthHTTPServer(srv, healthService)
 	return srv
 }
